News UAT/force-app/main/default/objects/Product2/fields/Booking_System__c.field-meta.xml
<CustomField>
    <fullName>Booking_System__c</fullName>
    <description>Booking system for this product category</description>
    <label>Booking System</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cyber$ell</fullName>
            </value>
            <value>
                <fullName>CyberAd ADN</fullName>
            </value>
            <value>
                <fullName>CyberAd CNG</fullName>
            </value>
            <value>
                <fullName>CyberAd CNS</fullName>
            </value>
            <value>
                <fullName>CyberAd GAD</fullName>
            </value>
            <value>
                <fullName>CyberAd GCP</fullName>
            </value>
            <value>
                <fullName>CyberAd HWT</fullName>
            </value>
            <value>
                <fullName>CyberAd LDR</fullName>
            </value>
            <value>
                <fullName>CyberAd NQN</fullName>
            </value>
            <value>
                <fullName>CyberAd NTN</fullName>
            </value>
            <value>
                <fullName>CyberAd NWN</fullName>
            </value>
            <value>
                <fullName>CyberAd QNP</fullName>
            </value>
            <value>
                <fullName>CyberAd QST</fullName>
            </value>
            <value>
                <fullName>AdPoint</fullName>
            </value>
            <value>
                <fullName>Dummy</fullName>
            </value>
            <value>
                <fullName>Leapfrog</fullName>
            </value>
            <value>
                <fullName>NewsAdds</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>