News UAT/force-app/main/default/objects/Product2/fields/CyberAd_Division__c.field-meta.xml
<CustomField>
    <fullName>CyberAd_Division__c</fullName>
    <formula>IF(
FIND(&quot; &quot;, TEXT(Booking_System__c))&gt;1,
RIGHT( TEXT(Booking_System__c) ,LEN(TEXT(Booking_System__c)) - FIND(&quot; &quot;, TEXT(Booking_System__c))),
&quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CyberAd Division</label>
    <type>Text</type>
</CustomField>