News UAT/force-app/main/default/objects/Product2/fields/isTest__c.field-meta.xml
<CustomField>
    <fullName>isTest__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field purely for testing class use. The reason behind this is that we need to turn on annotation SeeAllData in order to allow test class to get standard price book from Database. But we don&#39;t want to see existing product records in test class. This field is only visible for system administrator.</description>
    <label>Test</label>
    <type>Checkbox</type>
</CustomField>