News UAT/force-app/main/default/objects/Product2/fields/NLM_Category__c.field-meta.xml
<CustomField>
    <fullName>NLM_Category__c</fullName>
    <inlineHelpText>NLM Categorisation of products</inlineHelpText>
    <label>NLM Category</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Other</fullName>
                <default>true</default>
                <label>Other</label>
            </value>
            <value>
                <fullName>Style</fullName>
            </value>
            <value>
                <fullName>Food &amp; Family</fullName>
            </value>
            <value>
                <fullName>Homes</fullName>
            </value>
            <value>
                <fullName>Premium Living</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>