News UAT/force-app/main/default/objects/Product2/fields/Product_Group_L1__c.field-meta.xml
<CustomField>
    <fullName>Product_Group_L1__c</fullName>
    <label>Product Group L1</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Digital</fullName>
            </value>
            <value>
                <fullName>Print</fullName>
            </value>
            <value>
                <fullName>Magazine</fullName>
            </value>
            <value>
                <fullName>Target</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>