News UAT/force-app/main/default/objects/Product2/fields/PublicationList__c.field-meta.xml
<CustomField>
    <fullName>PublicationList__c</fullName>
    <label>PublicationList</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>