News UAT/force-app/main/default/objects/Product2/fields/Region__c.field-meta.xml
<CustomField>
    <fullName>Region__c</fullName>
    <label>Region</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin</fullName>
            </value>
            <value>
                <fullName>Airlie Beach</fullName>
            </value>
            <value>
                <fullName>Australian Golf Digest</fullName>
            </value>
            <value>
                <fullName>Best Recipes</fullName>
            </value>
            <value>
                <fullName>Big League</fullName>
            </value>
            <value>
                <fullName>Big League Specials</fullName>
            </value>
            <value>
                <fullName>Biloela</fullName>
            </value>
            <value>
                <fullName>Birth</fullName>
            </value>
            <value>
                <fullName>Body &amp; Soul</fullName>
            </value>
            <value>
                <fullName>Bundaberg</fullName>
            </value>
            <value>
                <fullName>Buro247</fullName>
            </value>
            <value>
                <fullName>Cairns</fullName>
            </value>
            <value>
                <fullName>Careers</fullName>
            </value>
            <value>
                <fullName>Carsguide</fullName>
            </value>
            <value>
                <fullName>Chadstone Fashion Capital</fullName>
            </value>
            <value>
                <fullName>Chinchilla-Surrat</fullName>
            </value>
            <value>
                <fullName>Coffs Harbour</fullName>
            </value>
            <value>
                <fullName>Community Mastheads</fullName>
            </value>
            <value>
                <fullName>Country Style</fullName>
            </value>
            <value>
                <fullName>Country Style Specials</fullName>
            </value>
            <value>
                <fullName>Courier Mail</fullName>
            </value>
            <value>
                <fullName>Daily Telegraph</fullName>
            </value>
            <value>
                <fullName>Delicious</fullName>
            </value>
            <value>
                <fullName>Delicious.com.au</fullName>
            </value>
            <value>
                <fullName>Diakrit</fullName>
            </value>
            <value>
                <fullName>Donna Hay</fullName>
            </value>
            <value>
                <fullName>Donna Hay Specials</fullName>
            </value>
            <value>
                <fullName>Emerald</fullName>
            </value>
            <value>
                <fullName>Escape.com.au</fullName>
            </value>
            <value>
                <fullName>Facebook</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>