News UAT/force-app/main/default/objects/Product2/fields/Revenue_Attribution__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Attribution__c</fullName>
    <description>Field is used to denote some NewsAdds products to be allocated to NewsXtend revenue. Few products will have a value selected, most will be marked as None. Data Services will advise if a product needs to be marked for revenue attribution.</description>
    <inlineHelpText>Field is used to denote some NewsAdds products to be allocated to NewsXtend revenue. Few products will have a value selected, most will be marked as None. Data Services will advise if a product needs to be marked for revenue attribution.</inlineHelpText>
    <label>Revenue Attribution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>NewsAdds NewsXtend</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>