News UAT/force-app/main/default/objects/Product2/listViews/All_Products_Active.listView-meta.xml
<ListView>
    <fullName>All_Products_Active</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Category__c</columns>
    <columns>Region__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Booking_System__c</columns>
    <columns>External_Id__c</columns>
    <columns>CyberAd_Division__c</columns>
    <columns>PublicationList__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>PRODUCT2.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Products (Active)</label>
</ListView>