News UAT/force-app/main/default/objects/Product2/listViews/AllProducts.listView-meta.xml
<ListView>
    <fullName>AllProducts</fullName>
    <columns>PRODUCT2.ACTIVE</columns>
    <columns>PRODUCT2.FAMILY</columns>
    <columns>Category__c</columns>
    <columns>Region__c</columns>
    <columns>PRODUCT2.NAME</columns>
    <columns>Booking_System__c</columns>
    <columns>External_Id__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Products</label>
</ListView>